--- a/vreme/src/App.css
+++ b/vreme/src/App.css
@@ -16,6 +16,8 @@
 .App-header {
   background-color: #282c34;
   background-image: linear-gradient(to top right, plum, #282c34);
+
+  background-size: auto;
   min-height: 100vh;
   /*display: flex;
   flex-direction: column;
@@ -40,7 +42,7 @@
 
 /* NAVBAR */
 #logoImg {
-  width: 70%;
+  width: 30%;
   object-fit: cover;
 }
 
@@ -78,4 +80,52 @@
 
 #degrees {
   font-size: 2rem;
+}
+
+#mainSearchRow {
+  background-color: #282c34;
+  border-radius: 6px;
+  padding: 0.5rem;
+}
+
+#navToastHeader {
+  background-color: #282c34;
+  border-radius: 0%;
+  border: none;
+}
+#navToastBody {
+  background-color: #282c34;
+  border: none;
+}
+
+#form {
+  width: 100%;
+}
+
+#favoriteCities {
+  margin-left: auto;
+  font-size: 1rem;
+}
+
+#brokenHeart {
+  font-size: 1.5rem;
+}
+
+#logoAndTitle,
+#logoFavorites {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+#mainSearchRow {
+  background-image: linear-gradient(black, white);
+}
+
+#mainSearchFavorites {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
 }
