--- a/vreme/src/App.css
+++ b/vreme/src/App.css
@@ -189,5 +189,12 @@
 #description {
   background-color: rgba(40, 44, 52, 0.4);
   padding: 0 0.5rem 0 0;
-  align-self: flex-start;
+  align-self: stretch;
+  border-bottom-right-radius: 3px;
+}
+
+.badgeStyling {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
