--- a/vreme/src/App.css
+++ b/vreme/src/App.css
@@ -175,6 +175,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  align-self: stretch;
   font-size: 1rem;
   font-weight: bold;
   background-color: #282c34;
